# dj-sort

./: .artifacts  .gitignore  README.md  genres.example.yaml  genres.yaml  pyproject.toml  settings.example.yaml
.claude/: settings.local.json
docs/: archive-workflow.md  checklist.md  navidrome-playlists.md  spec.md  workflow.md
scripts/: bootstrap  check  lint  run  test
src/dj_sort/: __main__.py  cli.py  consolidation.py  curation.py  database.py  genres.py  hashing.py  lookup.py  metadata.py  mixedinkey.py  navidrome.py  paths.py  planning.py  playlists.py  processing.py  reports.py  settings.py
tests/: test_cli.py  test_consolidation.py  test_curation.py  test_database.py  test_genres.py  test_hashing.py  test_lookup.py  test_metadata.py  test_mixedinkey.py  test_navidrome.py  test_paths.py  test_planning.py  test_playlists.py  test_processing.py  test_settings.py
